Mencoba membuat header

--- a/style.css
+++ b/style.css
@@ -1,15 +1,19 @@
-body {
-    margin: 0;
-    padding: 0;
-}
 
 header {
     height: 100px;
     width: 1440px;
     background-color: blue;
     color: white;
+    display:flex;
 }
 
-.judul {
-    margin-left: 30px;
+.header {
+    margin-left: 60px;
+    margin-top: 20px;
+}
+
+header nav ul li a{
+    font-size: 35px;    
+    
+    
 }
