--- a/style.css
+++ b/style.css
@@ -1,19 +1,52 @@
 
 header {
-    height: 100px;
-    width: 1440px;
+    height: 90px;
+    width: 100%;
     background-color: blue;
-    color: white;
-    display:flex;
+    display: flex;
+    position:static;  
+    
 }
 
 .header {
-    margin-left: 60px;
-    margin-top: 20px;
+    margin-left: 90px;
+    margin-top: 25px;
+    color: white;
 }
 
-header nav ul li a{
-    font-size: 35px;    
+ li {
+    display: table-cell;
+    position: relative;
+    padding: 20px;
     
-    
+       
+}
+a {
+    color: white;
+    font-size: larger;
+}
+
+main p, main h2{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.jbr, .jtg, .jtm{
+    height: 250px;
+    width: fit-content;
+}
+
+footer{
+    background-color: blue;
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-align:justify;
+    width: 100%;
+    height: 90px;
 }
