--- a/style2.css
+++ b/style2.css
@@ -5,7 +5,7 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
     height: 100px;
     background-color: burlywood;
@@ -13,25 +13,35 @@ body {
     padding: 0 20px;
 }
 
+.left-content {
+    display: flex;
+    align-items: center;
+}
+.left-content img{
+    width: 75px;
+    height: 75px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
 .brand {
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 50px;
+    margin-left: 10px;
 }
-
-.menu {
-    display: flex;
+ .menu {
+    display:flex;
+    margin-right: 15px;
 }
 
 .menu li {
     list-style: none;
-    margin-right: 20px;
+    margin-right: 25px;
     position: relative;
 }
 
 .menu ul {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: #ffffff;
     padding: 10px;
     transition: all 0.7s ease;
     opacity: 0;
@@ -42,12 +52,25 @@ body {
     display: block;
     opacity: 1;
     visibility: visible;
-
 }
 
-.menu a{
-    color: black;
+.menu  li .nav a{
+    color: white;
     text-decoration: none;
+    transition: color 0.3s;
+}
+
+.menu  li .nav a:hover {
+    color: blue;
+}
+
+.menu li ul li a {
+    color: black; /* Ganti warna sesuai keinginan Anda */
+    text-decoration: none;
+    transition: color 0.3s;
+    display: block;
+    padding: 10px;
+    
 }
 
 section {
@@ -62,7 +85,7 @@ section {
 }
 
 ol li {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: x-large;
     list-style: none;
 }
@@ -71,14 +94,10 @@ ol li a{
     text-decoration: none;
     color: black;
 }
-
-/* Style lainnya */
-/* ... */
 section .kota-dan-logo {
     display: flex;
     justify-content: space-between;
 }
-
 .kota {
     width: 50%;
     padding: 20px;
