--- a/style2.css
+++ b/style2.css
@@ -8,7 +8,7 @@ body {
     justify-content:space-between;
     align-items: center;
     height: 100px;
-    background-color: burlywood;
+    background-color: #CB997E;
     color: white;
     padding: 0 20px;
 }
