--- a/style1.css
+++ b/style1.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     height: 90px;
     background-color: #CB997E;
-    color: #000000;
+    color: #FFE8D6;
 }
 
 .left-content {
@@ -45,25 +45,23 @@ body {
     transition: all 0.7s ease;
     opacity: 0;
     visibility: hidden;
-    height: 125px;
-    width: 100px;
+    max-width: 110px;
 }
 
 .menu li:hover > ul {
     display: block;
     opacity: 1;
     visibility: visible;
-    overflow: auto;
 }
 
 .menu  li .nav a{
-    color: #000000;
+    color: #FFE8D6;
     text-decoration: none;
     transition: color 0.3s, ;
 }
 
 .menu  li .nav a:hover {
-    color: #ffffff;
+    color: #000000;
     text-decoration: underline;
 }
 
@@ -78,13 +76,11 @@ body {
 
 section {
     width: 100%;
-    height: 550px;
+    height: 500px;
     margin-top: 3%;
-    background-color: #f4f4f4;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
 }
 
 ol li {
@@ -92,6 +88,11 @@ ol li {
     font-size: x-large;
     list-style: none;
     line-height: 1.3em;
+    transition:background-color 0.3s;
+}
+
+ol li :hover {
+    text-decoration: underline;
 }
 
 ol li a{
@@ -104,6 +105,11 @@ section .kota-dan-logo {
 }
 .kota {
     width: 35%;
+    height: 500px;
+    background-color: #f4f4f4;
+    display: flex;
+    align-items: center;
+    justify-content: left;
 }
 
 .logo {
