--- a/homepage.css
+++ b/homepage.css
@@ -163,7 +163,8 @@ p {
 
 .deskripsi {
   margin-right: 100px;
-  text-align: center;
+  margin-left: 291px;
+  text-align: justify;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 line-height: 30px;
 font-size: 17px;
